sample html page created

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title>Query Translator </title>
 </head>
-<body>
-    <h4>Convert  MongoDB Query To Mgo Syntax </h4>
-
+<h1> <center>We are comming soon </center></h1>
 </body>
 </html>
