adding heroku url

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>Query Translator </title>
 </head>
-<h1> <center>We are comming soon </center></h1>
+<body>
+    <h1>
+        <center>Convert MongoDB Query To Mgo Syntax </center>
+    </h1>
+
+    <marquee>
+        <h3> We Are Coming Soon </h3>
+    </marquee>
 </body>
 </html>
