--- a/index.html
+++ b/index.html
@@ -12,5 +12,22 @@
     <marquee>
         <h3> We Are Coming Soon </h3>
     </marquee>
+
+    <form method="post">
+        Enter DB Name* : <br>
+
+        <input type="text" name="dbName" style="width: 200px;" />
+        <br>
+        <br>
+        <br>
+        <br>
+        Enter Mongo Query : <br>
+        <input type="text" name="dbQuery" style="width: 300px; height: 100px;" />
+        <br>
+        <br>
+        <button type="button" name="generate">Generete!</button>
+
+
+    </form>
 </body>
 </html>
