--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <h3> We Are Coming Soon </h3>
     </marquee>
 
-    <form method="post">
+    <form action="http://localhost:9876/" method="post">
         Enter DB Name* : <br>
-
         <input type="text" name="dbName" style="width: 200px;" />
         <br>
         <br>
@@ -25,7 +24,7 @@
         <input type="text" name="dbQuery" style="width: 300px; height: 100px;" />
         <br>
         <br>
-        <button type="button" name="generate">Generete!</button>
+        <input type="submit" value="generate" />
 
 
     </form>
