--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Query Translator </title>
+    <title>{{ .Title }} </title>
 </head>
 <body>
     <h1>
@@ -13,7 +13,7 @@
         <h3> We Are Coming Soon </h3>
     </marquee>
 
-    <form action="http://localhost:9876/" method="post">
+    <form action={{ .URL }} method="post">
         Enter DB Name* : <br>
         <input type="text" name="dbName" style="width: 200px;" />
         <br>
